--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.2.1",
     "aws-sdk": "^2.1199.0",
     "axios": "^0.27.2",
+    "firebase": "^9.9.3",
     "formik": "^2.2.9",
     "json-server": "^0.17.0",
     "react": "^18.2.0",
@@ -21,6 +22,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.0",
     "yup": "^0.32.11"
